# ebapi

./: .gitignore  .pylintrc  .trivyignore  LICENSE  Makefile  README.md  pyproject.toml
app/: .zipignore  common.py  config.py  main.py  settings.py
app/api/: area.py  character.py  enemy.py  item.py  psi.py  shop.py
app/db/models/: area.py  base.py  character.py  common.py  enemy.py  indexes.py  item.py  psi.py  response.py  shop.py
infra/: api_gateway.tf  data.tf  lambda_function.tf  locals.tf  outputs.tf  provider.tf  route53.tf  variables.tf  waf.tf
scripts/: init.sh  openapi_spec_export.py  seed.py
scripts/data/: seed_areas.csv  seed_armor.csv  seed_battle_items.csv  seed_edibles.csv  seed_enemies.csv  seed_key_items.csv  seed_nonplayer_characters.csv  seed_player_characters.csv  seed_psi.csv  seed_shops.csv  seed_weapons.csv
tests/: test_common.py  test_config.py  test_main.py
tests/api/: conftest.py  test_area.py  test_character.py  test_enemy.py  test_item.py  test_psi.py  test_shop.py
tests/models/: test_area.py  test_base.py  test_character.py  test_common.py  test_enemy.py  test_indexes.py  test_item.py  test_psi.py  test_response.py  test_shop.py
