[tool.poetry]
name = "ebapi"
version = "0.1.0"
description = "An Earthbound API for both Lambda and Uvicorn"
authors = ["thedeo <deo@me.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.12.5"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.runtime.dependencies]
fastapi = "^0.95.0"
pynamodb = "^6.0.1"
python-dotenv = "^1.0.1"
mangum = "^0.12.0"

[tool.poetry.group.dev.dependencies]
uvicorn = "^0.21.1"
httpx = "^0.27.2"
boto3 = "^1.35.18"
pylint = "^3.3.0"
pytest = "^8.3.3"
coverage = "^7.6.1"
tqdm = "^4.66.5"
moto = "^5.0.15"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]